--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
         "name": "Simon Ensslen",
         "email": "sensslen@gmail.com"
     },
-    "main": "dist/main.js",
+    "main": ".webpack/main",
     "scripts": {
-        "postinstall": "sort-package-json",
         "prestart": "sort-package-json",
-        "start": "tsc && electron-forge start",
+        "start": "electron-forge start",
+        "postinstall": "sort-package-json",
         "prepackage": "sort-package-json",
         "package": "electron-forge package",
         "premake": "sort-package-json",
         "make": "electron-forge make",
         "prepublish": "sort-package-json",
-        "publish": "sort-package-json && electron-forge publish",
+        "publish": "electron-forge publish",
         "lint": "eslint --ext .ts ."
     },
     "config": {
@@ -56,13 +56,37 @@
                     "name": "@electron-forge/maker-rpm",
                     "config": {}
                 }
+            ],
+            "plugins": [
+                [
+                    "@electron-forge/plugin-webpack",
+                    {
+                        "mainConfig": "./webpack.main.config.js",
+                        "renderer": {
+                            "config": "./webpack.renderer.config.js",
+                            "entryPoints": [
+                                {
+                                    "html": "./src/MainWindow/MainWindow.html",
+                                    "js": "./src/MainWindow/renderer.tsx",
+                                    "preload": {
+                                        "js": "./src/MainWindow/preload/preload.ts"
+                                    },
+                                    "name": "main_window"
+                                }
+                            ]
+                        }
+                    }
+                ]
             ]
         }
     },
     "dependencies": {
         "cgf.cameracontrol.main.core": "^1.0.2-beta.10",
         "cgf.cameracontrol.main.gamepad": "^0.9.1-beta.11",
-        "electron-squirrel-startup": "^1.0.0"
+        "electron-squirrel-startup": "^1.0.0",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "styled-components": "^5.2.1"
     },
     "devDependencies": {
         "@electron-forge/cli": "^6.0.0-beta.54",
@@ -70,13 +94,22 @@
         "@electron-forge/maker-rpm": "^6.0.0-beta.54",
         "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
         "@electron-forge/maker-zip": "^6.0.0-beta.54",
-        "@typescript-eslint/eslint-plugin": "^4.17.0",
-        "@typescript-eslint/parser": "^4.17.0",
+        "@electron-forge/plugin-webpack": "^6.0.0-beta.54",
+        "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/styled-components": "^5.1.7",
+        "@typescript-eslint/eslint-plugin": "^4.18.0",
+        "@typescript-eslint/parser": "^4.18.0",
+        "css-loader": "^5.1.3",
         "electron": "12.0.1",
-        "electron-rebuild": "^2.3.5",
         "eslint": "^7.22.0",
         "eslint-plugin-import": "^2.22.1",
+        "fork-ts-checker-webpack-plugin": "^6.2.0",
+        "node-loader": "^1.0.2",
         "sort-package-json": "^1.49.0",
+        "style-loader": "^2.0.0",
+        "ts-loader": "^8.0.18",
         "typescript": "^4.2.3"
     },
     "productName": "Cgf.CameraControl.Main.Gui"
