--- a/package.json
+++ b/package.json
@@ -81,11 +81,11 @@
         }
     },
     "dependencies": {
-        "cgf.cameracontrol.main.core": "^1.0.2-beta.10",
+        "cgf.cameracontrol.main.core": "^1.0.2-beta.15",
         "cgf.cameracontrol.main.gamepad": "^0.9.1-beta.11",
         "electron-squirrel-startup": "^1.0.0",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
@@ -97,19 +97,20 @@
         "@electron-forge/plugin-webpack": "^6.0.0-beta.54",
         "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
         "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
+        "@types/react-dom": "^17.0.3",
         "@types/styled-components": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^4.18.0",
-        "@typescript-eslint/parser": "^4.18.0",
-        "css-loader": "^5.1.3",
+        "@typescript-eslint/eslint-plugin": "^4.19.0",
+        "@typescript-eslint/parser": "^4.19.0",
+        "copy-webpack-plugin": "^6.4.1",
+        "css-loader": "^5.2.0",
         "electron": "12.0.1",
-        "eslint": "^7.22.0",
+        "eslint": "^7.23.0",
         "eslint-plugin-import": "^2.22.1",
         "fork-ts-checker-webpack-plugin": "^6.2.0",
         "node-loader": "^1.0.2",
         "sort-package-json": "^1.49.0",
         "style-loader": "^2.0.0",
-        "ts-loader": "^8.0.18",
+        "ts-loader": "^8.1.0",
         "typescript": "^4.2.3"
     },
     "productName": "Cgf.CameraControl.Main.Gui"
