--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     },
     "main": ".webpack/main",
     "scripts": {
-        "prestart": "sort-package-json",
+        "hmi-config-schema": "ts-json-schema-generator --path \"./src/**/*.ts\" --type IHmiConfigurationWithoutCommunicationChannel -o src/MainWindow/services/WebHmi/IHmiConfigurationWithoutCommunicationChannel.json --tsconfig ./tsconfig.json --additional-properties true",
+        "gamepad-config-schema": "ts-json-schema-generator --path \"./src/**/*.ts\" --type IWebGamepadConfig -o src/MainWindow/services/WebHmi/RendererComponents/Gamepad/IWebGamepadConfig.json --tsconfig ./tsconfig.json --additional-properties true",
+        "before-build": "sort-package-json && npm run hmi-config-schema && npm run gamepad-config-schema && npm run lint",
+        "prestart": "npm run before-build",
         "start": "electron-forge start",
         "postinstall": "sort-package-json",
-        "prepackage": "sort-package-json",
+        "prepackage": "npm run before-build",
         "package": "electron-forge package",
-        "premake": "sort-package-json",
+        "premake": "npm run before-build",
         "make": "electron-forge make",
-        "prepare": "sort-package-json",
+        "prepublishOnly": "npm run before-build",
         "publish": "electron-forge publish",
         "lint": "eslint --ext .ts ."
     },
@@ -81,11 +84,13 @@
         }
     },
     "dependencies": {
-        "cgf.cameracontrol.main.core": "^1.0.2-beta.15",
-        "cgf.cameracontrol.main.gamepad": "^0.9.1-beta.11",
+        "ajv": "^8.0.5",
+        "cgf.cameracontrol.main.core": "^1.0.2-beta.20",
         "electron-squirrel-startup": "^1.0.0",
+        "eslint-import-resolver-webpack": "^0.13.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "strict-event-emitter-types": "^2.0.0",
         "styled-components": "^5.2.1"
     },
     "devDependencies": {
@@ -110,6 +115,7 @@
         "node-loader": "^1.0.2",
         "sort-package-json": "^1.49.0",
         "style-loader": "^2.0.0",
+        "ts-json-schema-generator": "^0.89.1",
         "ts-loader": "^8.1.0",
         "typescript": "^4.2.3"
     },
