--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     },
     "dependencies": {
         "ajv": "^8.0.5",
-        "cgf.cameracontrol.main.core": "^1.0.2-beta.28",
+        "cgf.cameracontrol.main.core": "^1.0.2-beta.30",
         "electron-squirrel-startup": "^1.0.0",
         "eslint-import-resolver-webpack": "^0.13.0",
         "react": "^17.0.2",
@@ -104,15 +104,19 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.3",
         "@types/styled-components": "^5.1.7",
-        "@typescript-eslint/eslint-plugin": "^4.19.0",
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.19.0",
         "copy-webpack-plugin": "^6.4.1",
         "css-loader": "^5.2.0",
         "electron": "12.0.1",
-        "eslint": "^7.23.0",
+        "eslint": "^7.24.0",
+        "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-prettier": "^3.3.1",
         "fork-ts-checker-webpack-plugin": "^6.2.0",
         "node-loader": "^1.0.2",
+        "prettier": "^2.2.1",
+        "prettier-eslint": "^12.0.0",
         "sort-package-json": "^1.49.0",
         "style-loader": "^2.0.0",
         "ts-json-schema-generator": "^0.89.1",
