--- a/src/MainWindow/services/WebHmi/RendererComponents/Gamepad/IWebGamepadConfig.json
+++ b/src/MainWindow/services/WebHmi/RendererComponents/Gamepad/IWebGamepadConfig.json
@@ -2,180 +2,180 @@
   "$ref": "#/definitions/IWebGamepadConfig",
   "$schema": "http://json-schema.org/draft-07/schema#",
   "definitions": {
-    "ISpecialFunctionDefinition": {
-      "properties": {
-        "Index": {
-          "type": "number"
-        },
-        "Type": {
-          "$ref": "#/definitions/eSpecialFunctionType"
-        }
-      },
-      "required": [
-        "Type",
-        "Index"
-      ],
-      "type": "object"
-    },
-    "IWebGamepadConfig": {
-      "properties": {
-        "ConnectionChange": {
-          "properties": {
-            "Alt": {
-              "additionalProperties": false,
-              "properties": {
-                "down": {
-                  "type": "number"
-                },
-                "left": {
-                  "type": "number"
-                },
-                "right": {
-                  "type": "number"
-                },
-                "up": {
-                  "type": "number"
-                }
-              },
-              "type": "object"
-            },
-            "AltLower": {
-              "additionalProperties": false,
-              "properties": {
-                "down": {
-                  "type": "number"
-                },
-                "left": {
-                  "type": "number"
-                },
-                "right": {
-                  "type": "number"
-                },
-                "up": {
-                  "type": "number"
-                }
-              },
-              "type": "object"
-            },
-            "Default": {
-              "additionalProperties": false,
-              "properties": {
-                "down": {
-                  "type": "number"
-                },
-                "left": {
-                  "type": "number"
-                },
-                "right": {
-                  "type": "number"
-                },
-                "up": {
-                  "type": "number"
-                }
-              },
-              "type": "object"
-            }
-          },
-          "required": [
-            "Default"
-          ],
-          "type": "object"
-        },
-        "MixBlock": {
-          "type": "number"
-        },
-        "SpecialFunction": {
-          "properties": {
-            "Alt": {
-              "additionalProperties": false,
-              "properties": {
-                "down": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                },
-                "left": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                },
-                "right": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                },
-                "up": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                }
-              },
-              "type": "object"
-            },
-            "AltLower": {
-              "additionalProperties": false,
-              "properties": {
-                "down": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                },
-                "left": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                },
-                "right": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                },
-                "up": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                }
-              },
-              "type": "object"
-            },
-            "Default": {
-              "additionalProperties": false,
-              "properties": {
-                "down": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                },
-                "left": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                },
-                "right": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                },
-                "up": {
-                  "$ref": "#/definitions/ISpecialFunctionDefinition"
-                }
-              },
-              "type": "object"
-            }
-          },
-          "required": [
-            "Default"
-          ],
-          "type": "object"
-        },
-        "VideoMixer": {
-          "type": "number"
-        },
-        "communicationChannel": {
-          "type": "string"
-        },
-        "instance": {
-          "type": "number"
-        },
-        "type": {
-          "type": "string"
-        }
-      },
-      "required": [
-        "ConnectionChange",
-        "MixBlock",
-        "SpecialFunction",
-        "VideoMixer",
-        "communicationChannel",
-        "instance",
-        "type"
-      ],
-      "type": "object"
-    },
-    "eSpecialFunctionType": {
+    "ESpecialFunctionType": {
       "enum": [
         "key",
         "macro"
       ],
       "type": "string"
+    },
+    "ISpecialFunctionDefinition": {
+      "properties": {
+        "index": {
+          "type": "number"
+        },
+        "type": {
+          "$ref": "#/definitions/ESpecialFunctionType"
+        }
+      },
+      "required": [
+        "type",
+        "index"
+      ],
+      "type": "object"
+    },
+    "IWebGamepadConfig": {
+      "properties": {
+        "communicationChannel": {
+          "type": "string"
+        },
+        "connectionChange": {
+          "properties": {
+            "alt": {
+              "additionalProperties": false,
+              "properties": {
+                "down": {
+                  "type": "number"
+                },
+                "left": {
+                  "type": "number"
+                },
+                "right": {
+                  "type": "number"
+                },
+                "up": {
+                  "type": "number"
+                }
+              },
+              "type": "object"
+            },
+            "altLower": {
+              "additionalProperties": false,
+              "properties": {
+                "down": {
+                  "type": "number"
+                },
+                "left": {
+                  "type": "number"
+                },
+                "right": {
+                  "type": "number"
+                },
+                "up": {
+                  "type": "number"
+                }
+              },
+              "type": "object"
+            },
+            "default": {
+              "additionalProperties": false,
+              "properties": {
+                "down": {
+                  "type": "number"
+                },
+                "left": {
+                  "type": "number"
+                },
+                "right": {
+                  "type": "number"
+                },
+                "up": {
+                  "type": "number"
+                }
+              },
+              "type": "object"
+            }
+          },
+          "required": [
+            "default"
+          ],
+          "type": "object"
+        },
+        "instance": {
+          "type": "number"
+        },
+        "mixBlock": {
+          "type": "number"
+        },
+        "specialFunction": {
+          "properties": {
+            "alt": {
+              "additionalProperties": false,
+              "properties": {
+                "down": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                },
+                "left": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                },
+                "right": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                },
+                "up": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                }
+              },
+              "type": "object"
+            },
+            "altLower": {
+              "additionalProperties": false,
+              "properties": {
+                "down": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                },
+                "left": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                },
+                "right": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                },
+                "up": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                }
+              },
+              "type": "object"
+            },
+            "default": {
+              "additionalProperties": false,
+              "properties": {
+                "down": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                },
+                "left": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                },
+                "right": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                },
+                "up": {
+                  "$ref": "#/definitions/ISpecialFunctionDefinition"
+                }
+              },
+              "type": "object"
+            }
+          },
+          "required": [
+            "default"
+          ],
+          "type": "object"
+        },
+        "type": {
+          "type": "string"
+        },
+        "videoMixer": {
+          "type": "number"
+        }
+      },
+      "required": [
+        "communicationChannel",
+        "connectionChange",
+        "instance",
+        "mixBlock",
+        "specialFunction",
+        "type",
+        "videoMixer"
+      ],
+      "type": "object"
     }
   }
 }
