ignore webpack config from eslint and also add react linting plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,16 @@
     "es6": true,
     "node": true
   },
+  "root": true,
   "parser": "@typescript-eslint/parser",
+  
+  "parserOptions":  {
+   "ecmaVersion":  2018,
+    "sourceType":  "module",
+    "ecmaFeatures":  {
+      "jsx":  true
+    }
+  },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
@@ -12,8 +21,14 @@
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:import/typescript",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:react/recommended"
   ],
+  "settings":  {
+    "react":  {
+      "version":  "detect"  // Tells eslint-plugin-react to automatically detect the version of React to use
+    }
+  },
   "rules": {
     "@typescript-eslint/indent": [
       "error",
