--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.23.2",
         "fork-ts-checker-webpack-plugin": "^6.2.0",
         "node-loader": "^1.0.2",
         "prettier": "^2.2.1",
