Initial version that passed all off site tests

--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
         }
     },
     "dependencies": {
-        "ajv": "^8.0.5",
-        "cgf.cameracontrol.main.core": "^1.0.2-beta.32",
+        "ajv": "^8.2.0",
+        "cgf.cameracontrol.main.core": "^1.0.2",
         "electron-squirrel-startup": "^1.0.0",
         "eslint-import-resolver-webpack": "^0.13.0",
         "react": "^17.0.2",
@@ -101,7 +101,7 @@
         "@electron-forge/maker-zip": "^6.0.0-beta.54",
         "@electron-forge/plugin-webpack": "^6.0.0-beta.54",
         "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
-        "@types/react": "^17.0.0",
+        "@types/react": "^17.0.4",
         "@types/react-dom": "^17.0.3",
         "@types/styled-components": "^5.1.7",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -109,10 +109,10 @@
         "copy-webpack-plugin": "^6.4.1",
         "css-loader": "^5.2.0",
         "electron": "12.0.1",
-        "eslint": "^7.24.0",
-        "eslint-config-prettier": "^8.1.0",
+        "eslint": "^7.25.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-react": "^7.23.2",
         "fork-ts-checker-webpack-plugin": "^6.2.0",
         "node-loader": "^1.0.2",
@@ -120,7 +120,7 @@
         "prettier-eslint": "^12.0.0",
         "sort-package-json": "^1.49.0",
         "style-loader": "^2.0.0",
-        "ts-json-schema-generator": "^0.89.1",
+        "ts-json-schema-generator": "^0.89.0",
         "ts-loader": "^8.1.0",
         "typescript": "^4.2.3"
     },
