--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "strict-event-emitter-types": "^2.0.0",
-        "styled-components": "^5.2.1"
+        "styled-components": "^5.2.1",
+        "update-electron-app": "^2.0.1"
     },
     "devDependencies": {
         "@electron-forge/cli": "^6.0.0-beta.54",
