--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,3 +46,10 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: npm run publish
+            - name: Upload
+              uses: softprops/action-gh-release@v1
+              with:
+                files: |
+                  "**/make/**/*.exe"
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
