--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,14 +42,9 @@ jobs:
                   node-version: 14
             - name: install dependencies
               run: npm install
+            - name: set version number
+              run: node SetVersion.js
             - name: publish
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: npm run publish
-            - name: Upload
-              uses: softprops/action-gh-release@v1
-              with:
-                files: |
-                  "**/make/**/*.exe"
-              env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
