--- a/package.json
+++ b/package.json
@@ -40,12 +40,23 @@
     },
     "config": {
         "forge": {
+            "publishers": {
+                "name": "@electron-forge/publisher-github",
+                "config": {
+                    "repository": {
+                        "owner": "Simon Ensslen",
+                        "name": "cgf.cameracontrol.main.gui"
+                    },
+                    "prerelease": true
+                }
+            },
             "packagerConfig": {},
             "makers": [
                 {
                     "name": "@electron-forge/maker-squirrel",
                     "config": {
-                        "name": "cgf.cameracontrol.main.gui"
+                        "name": "cgf.cameracontrol.main.gui",
+                        "provider": "github"
                     }
                 },
                 {
@@ -122,6 +133,8 @@
         "node-loader": "^1.0.2",
         "prettier": "^2.2.1",
         "prettier-eslint": "^12.0.0",
+        "semver": "^7.3.5",
+        "simple-git": "^2.37.0",
         "sort-package-json": "^1.49.0",
         "style-loader": "^2.0.0",
         "ts-json-schema-generator": "^0.89.0",
