--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ jobs:
                   node-version: 14
             - name: install dependencies
               run: npm install
+            - name: set version number
+              run: node SetVersion.js
             - name: publish
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -28,6 +30,8 @@ jobs:
                   node-version: 14
             - name: install dependencies
               run: npm install
+            - name: set version number
+              run: node SetVersion.js
             - name: publish
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
