--- a/src/MainWindow/services/WebHmi/RendererComponents/Gamepad/IWebGamepadConfig.json
+++ b/src/MainWindow/services/WebHmi/RendererComponents/Gamepad/IWebGamepadConfig.json
@@ -5,7 +5,8 @@
     "ESpecialFunctionType": {
       "enum": [
         "key",
-        "macro"
+        "macro",
+        "connectionChange"
       ],
       "type": "string"
     },
