--- a/src/MainWindow/services/WebHmi/RendererComponents/Gamepad/SpecialFunctions/ISpecialFunctionConnectionChangeConfig.json
+++ b/src/MainWindow/services/WebHmi/RendererComponents/Gamepad/SpecialFunctions/ISpecialFunctionConnectionChangeConfig.json
@@ -1,30 +1,25 @@
 {
-  "$ref": "#/definitions/ISpecialFunctionMacroConfig",
+  "$ref": "#/definitions/ISpecialFunctionKeyConfig",
   "$schema": "http://json-schema.org/draft-07/schema#",
   "definitions": {
     "ESpecialFunctionType": {
       "enum": [
         "key",
-        "macro",
-        "connectionChange"
+        "macro"
       ],
       "type": "string"
     },
-    "ISpecialFunctionMacroConfig": {
+    "ISpecialFunctionKeyConfig": {
       "properties": {
-        "indexes": {
-          "items": {
-            "type": "number"
-          },
-          "minItems": 1,
-          "type": "array"
+        "index": {
+          "type": "number"
         },
         "type": {
           "$ref": "#/definitions/ESpecialFunctionType"
         }
       },
       "required": [
-        "indexes",
+        "index",
         "type"
       ],
       "type": "object"
